<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:text="@string/main_amount"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/main_txw_amount"
        android:textSize="30sp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/main_lnly_button_container">

        <Button
            android:text="@string/main_m1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/main_btn_m1"
            android:layout_weight="1" />

        <Button
            android:text="@string/main_m5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/main_btn_m5"
            android:layout_weight="1" />

        <Button
            android:text="@string/main_m10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/main_btn_m10"
            android:layout_weight="1" />

        <Button
            android:text="@string/main_m100"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/main_btn_m100"
            android:layout_weight="1" />

        <Button
            android:text="@string/main_mcustom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/main_btn_mcustom"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/main_edt_custom"
            android:layout_weight="1"
            android:visibility="gone"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/main_btn_clean"
            android:text="@string/main_dialog_clean"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>